syntax = "proto3";
package flatsharing.auth.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";

import "google/api/annotations.proto";

option go_package = "internal/api-auth/v1";

service AuthServices {
  rpc Signin (SigninRequest) returns (SigninResponse) {
    option (google.api.http) = {
      post: "/v1/signin"
      body: "*"
    };
  }
  rpc Logout (LogoutRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/logout"
      body: "*"
    };
  }
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/v1/user"
      body: "*"
    };
  }
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse) {
    option (google.api.http) = {
      get: "/v1/user"
    };
  }
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {
      get: "/v1/user/{user.id}"
    };
  }
  rpc UpdateUser (UpdateUserRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/v1/user/{user.id}"
      body: "*"
    };
  }
  rpc DeleteUser (DeleteUserRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/user/{user.id}"
    };
  }
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  string id = 1;
}

message SigninRequest {
  string login = 1;
  string password = 2;
}

message SigninResponse {
  string token = 1;
}

message LogoutRequest {
  string token = 1;
}

message ListUsersRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message ListUsersResponse {
  // See https://github.com/GoogleCloudPlatform/google-cloud-go/blob/master/monitoring/apiv3/metric_client.go#L137
  repeated User users = 1;
  string next_page_token = 2;
  int32 total_page_size = 3;
}

message GetUserRequest {
  User user = 1;
}

message GetUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  User user = 1;
  // The update mask applies to the resource. For the `FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#fieldmask
  // or here https://github.com/gogo/grpc-example/commit/6c217371b67a89609c632f047477fa5a1123ac93
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteUserRequest {
  User user = 1;
}

message User {
  string id = 1;
  string mail = 2;
  string username = 3;
  string login = 4;
  string firstname = 5;
  string lastname = 6;
  string password = 7;
  int32 role = 8;
  string created_at = 9;
}
